# msft-reactor-demo

./: .gitignore  .gitmodules  README.md  demo.yaml  slight.yaml
aks-demo/: Cargo.toml  pod.yaml
aks-demo/src/: main.rs
tensorflow-mobilenet-v2/: .gitignore  Cargo.toml
tensorflow-mobilenet-v2/src/: main.rs
wasi-deployment/: values.yaml  wasi-example.yaml
